[package]
name = "masser_gramain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big-rational-str = "0.1.6"
rust_decimal = { version = "1.32.0", features = ["maths"] }
rust_decimal_macros = "1.32.0"